# whisper_connector

./: Cargo.toml  LICENSE.md
src/: main.rs
