[package]
name = "whisper_connector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gd_terminal_utils = { path = "../gd_terminal_utils/" }
tokio = { version = "1.37.0", features = ["full", "sync"] }
ctrlc = "3.4"
tokio-util = "0.7.10"
reqwest = { version = "0.12.4", features = ["multipart", "stream"] }
serde_json = "1.0.116"
serde = { version = "1.0.198", features = ["derive"] }
rand = { version = "0.8.5" }
